--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My second github repo</title>
   </head>
-  <body></body>
+  <body>
+    <h1>I can push to github</h1>
+    <h2>Mama i can code now</h2>
+    <h3>New code changed</h3>
+  </body>
 </html>
