--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h3>New code changed</h3>
     <p>More paragraph</p>
     <p>I am coding and coding and coding</p>
+    <img src="img/decap.jpg" alt="" />
+    <img src="img/tomcruise.jpg" alt="" />
   </body>
 </html>
